# audio-recorder

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  depcomp  missing
data/: Makefile.am  Makefile.in  audio-recorder.desktop  filename-format.html  org.gnome.audio-recorder.gschema.xml  readme.txt  timer-syntax.html
debian/: README.Debian  README.source  audio-recorder.1  audio-recorder.doc-base.EX  audio-recorder.manpages  changelog  clean  control  copyright  rules  watch
debian/patches/: 0001-Delete-extra-COPYING-file-in-data.patch  0001-Do-not-install-extra-COPYING-file-in-data.patch  0002-Delete-autogenerated-files.patch  0002-Missing-copyright-notice-added.patch  series
dev-info/: banshee_readme.txt  marshal.list
icons/: Makefile.in
icons/hicolor/: Makefile.am  Makefile.in
icons/hicolor/scalable/: Makefile.am  Makefile.in
icons/hicolor/scalable/apps/: Makefile.am  Makefile.in
icons/hicolor/scalable/status/: Makefile.am  Makefile.in
linux-distros/arch-linux/: PKGBUILD  readme.txt
linux-distros/fedora/: audio-recorder.spec  readme.txt
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  POTFILES.in  af.po  ar.po  ca.po  cs.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fi.po  fix-names.sh  fr.po  gl.po  he.po  hr.po  hu.po  it.po  lt.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  about.c  about.h  audio-sources.c  audio-sources.h  auto-start.c  auto-start.h  config.h  config.h.in  dbus-mpris2.c  dbus-mpris2.h  dbus-player.c  dbus-player.h  dbus-server.c  dbus-server.h  dbus-skype.c  dbus-skype.h  dconf.c  dconf.h  gst-devices.c  gst-devices.h  gst-pipeline.c  gst-pipeline.h  gst-recorder.c  gst-recorder.h  gst-vad.c  gst-vad.h  help.c  help.h  levelbar.c  levelbar.h  log.c  log.h  main.c  media-profiles.c  media-profiles.h  rec-manager-struct.h  rec-manager.c  rec-manager.h  (+12 more)
