#SUBDIRS = 

# audio-recorder-X-small.svg files are button images (in the GUI).
pixmapsdir = $(datadir)/pixmaps/audio-recorder
pixmaps_DATA = *.svg *.png

# These are icons for the AppIndicator class (new system tray icons in Unity and GNOME 3.x).
# statusicondir = $(datadir)/icons/hicolor/48x48/apps
# statusicon_DATA = audio-recorder-on.png \
#                audio-recorder-off.png \
#                audio-recorder-paused.png

EXTRA_DIST = \
	$(pixmaps_DATA)

#	$(statusicon_DATA)


